# vscode-wasm

./: .CodeQL.yml  .eslintrc.base.json  .eslintrc.json  .gitignore  .gitmodules  .tsconfigrc.js  DEPENDENTS.md  README.md  SUPPORT.md  azure-pipelines.yml  package-lock.json  package.json  ral.d.ts  scratch.nnb  tsconfig.json  tsconfig.watch.json
.github/: dependabot.yml
Documentation/: index.html  modules.html
configs/: serve.json
docs/: emscripten.md  matplotlib.md  nativeModule.md
preview2/: .eslintrc.json
rust-api/: package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
rust-api/rust/: Cargo.toml  all.rs
rust-api/rust/Source/: lib.rs
rust-api/rust/Source/commands/: mod.rs
rust-api/rust/Source/common/: mod.rs
rust-api/rust/Source/languages/: mod.rs
rust-api/rust/Source/window/: mod.rs
rust-api/rust/Source/workspace/: mod.rs
sync-api-client/: .eslintrc.json  .npmignore  README.md  package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
sync-api-common/: .eslintrc.json  .mocharc.json  README.md  browser.d.ts  browser.js  node.d.ts  node.js  package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
sync-api-service/: README.md  package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
sync-api-tests/: extension.js  package.json  tsconfig.json  tsconfig.publish.json  tsconfig.watch.json
testbeds/: .eslintignore  .eslintrc.json  package-lock.json  package.json  tsconfig.json
tools/: package.json  tsconfig.json  tsconfig.watch.json
wasi/: .eslintrc.json  package.json  (+2 more)
(+467 files in other folders)
