[package]
name = "vscode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8" }
once_cell = { version = "1.19.0" }
wit-bindgen = "0.24.0"
lazy_static = { version = "1.4.0" }
indexmap = { version = "1.7" }
